<resources>
    <string name="app_name">LevelUp</string>
    <string name="get_started">Get Started</string>
    <string name="password_updated">Your Password has been updated successfully</string>
    <string name="login_title">LOGIN</string>
    <string name="login">Log In</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="update_password">Update Password</string>
    <string name="update">Update</string>
    <string name="update_password_desc">Please update your password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome">Welcome</string>
    <string name="quote">You can make money or you can make excuses. Which do you prefer?</string>
    <string name="author">By Tom Ferry</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="notification">Notifications</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="applogo">AppLogo</string>
    <string name="passwordicon">passwordIcon</string>
    <string name="sponserimage">sponserImage</string>
    <string name="navicon">navIcon</string>
    <string name="slideimage">slideImage</string>


</resources>