<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.example.levelup.activityViewModels.UpdatePasswordViewModel"/>
        <import type="com.example.levelup.activities.UpdatePasswordActivity"/>

        <variable
            name="viewModel"
            type="UpdatePasswordViewModel" />

        <variable
            name="listnerHandler"
            type="UpdatePasswordActivity" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity"
        android:background="@color/white">

        <ImageView
            android:id="@+id/logo_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/logo_top_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_password"
            android:contentDescription="@string/passwordicon"
            />

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/title_top_margin"
            android:fontFamily="@font/geometos_bold"
            android:text="@string/update_password"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/font_22"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_image_view" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_margin1_top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_sponser"
            android:contentDescription="@string/sponserimage"
            />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_NewPassword"
            android:hint="@string/new_password"
            android:text="@={viewModel.password}"
            android:background="@drawable/edit_text_round_shape"
            android:textColorHint="@color/grey_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_title"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:layout_marginStart="@dimen/edit_text_margin_start"
            android:layout_marginEnd="@dimen/edit_text_margin_end"
            android:padding="@dimen/edit_text_padding"
            android:fontFamily="@font/ubuntu_regular"
            android:textSize="@dimen/font_medium"
            android:textColor="@color/black"
            android:inputType="textPassword"

            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_ConfirmPassword"
            android:hint="@string/confirm_password"
            android:text="@={viewModel.confirmPassword}"
            android:background="@drawable/edit_text_round_shape"
            android:textColorHint="@color/grey_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_NewPassword"
            android:layout_marginTop="@dimen/edit_text_margin_top_12"
            android:layout_marginStart="@dimen/edit_text_margin_start"
            android:layout_marginEnd="@dimen/edit_text_margin_end"
            android:padding="@dimen/edit_text_padding"
            android:fontFamily="@font/ubuntu_regular"
            android:textSize="@dimen/font_medium"
            android:textColor="@color/black"
            android:inputType="textPassword"
            />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Powered By"
            android:textAllCaps="true"
            android:fontFamily="@font/ubuntu_regular"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/font_medium_small"
            app:layout_constraintBottom_toTopOf="@+id/imageView3"
            android:layout_marginBottom="@dimen/activity_margin_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top_12"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/update_password_desc"
            android:textAlignment="center"
            android:textColor="@color/grey_text_color"
            android:textSize="@dimen/font_small_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_title" />

        <Button
            android:id="@+id/btn_getStarted"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/edit_text_margin_start"
            android:layout_marginEnd="@dimen/edit_text_margin_end"
            android:layout_marginTop="@dimen/activity_margin_bottom"
            style="@style/ButtonThemeColorStyle"
            android:text="@string/update"
            app:layout_constraintTop_toBottomOf="@id/et_ConfirmPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="@{listnerHandler::UpdateClicked}"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>