<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_cornered"
    android:padding="@dimen/padding_8"
    android:layout_margin="@dimen/activity_margin_bottom"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/avenirnextltpro_bold"
        android:text="@string/logout"
        android:textAlignment="center"
        android:textColor="@color/black_text_color"
        android:textSize="@dimen/font_medium_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_top"
        android:fontFamily="@font/avenirnextlpro_regular"
        android:text="@string/logout_msg"
        android:textAlignment="center"
        android:textColor="@color/grey_text_color"
        android:textSize="@dimen/font_small_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            style="@style/ButtonLightGreyColorStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_margin_horizontal"
            android:layout_marginStart="@dimen/activity_margin1_start"
            android:layout_marginTop="@dimen/activity_margin_top_32"
            android:layout_marginBottom="@dimen/activity_margin_top_32"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_logout"
            style="@style/ButtonRedColorStyle_Logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin_top_32"
            android:layout_marginBottom="@dimen/activity_margin_top_32"
            android:layout_marginStart="@dimen/activity_margin_horizontal"
            android:layout_marginEnd="@dimen/activity_margin1_start"
            android:layout_weight="1"
            android:text="@string/logout"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

    </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
