<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.example.levelup.activityViewModels.LoginViewModel"/>
        <import type="com.example.levelup.activities.Login"/>

        <variable
            name="viewModel"
            type="LoginViewModel" />

        <variable
            name="listnerHandler"
            type="Login" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.Login"
        android:background="@color/white">

        <ImageView
            android:id="@+id/logo_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/logo_top_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_levelup_logo" />

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/title_top_margin"
            android:fontFamily="@font/geometos_bold"
            android:text="@string/login_title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/font_22"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_image_view" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_margin1_top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_sponser" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_Email"
            android:text="@={viewModel.email}"
            android:hint="@string/email_hint"
            android:textColorHint="@color/grey_text_color"
            android:background="@drawable/edit_text_round_shape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_title"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:layout_marginStart="@dimen/edit_text_margin_start"
            android:layout_marginEnd="@dimen/edit_text_margin_end"
            android:padding="@dimen/edit_text_padding"
            android:fontFamily="@font/ubuntu_regular"
            android:textSize="@dimen/font_medium"
            android:textColor="@color/black_text_color" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/edit_text_margin_start"
            android:layout_marginTop="@dimen/edit_text_margin_top_12"
            android:layout_marginEnd="@dimen/edit_text_margin_end"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/et_Email">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_Password"
                android:text="@={viewModel.password}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:textColorHint="@color/grey_text_color"
                android:background="@drawable/edit_text_round_shape"
                android:inputType="textPassword"
                android:padding="@dimen/edit_text_padding"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/ubuntu_regular"
                android:textSize="@dimen/font_medium"
                android:textColor="@color/black_text_color" />

<!--            <ImageButton-->
<!--                android:id="@+id/active_button"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginEnd="16dp"-->
<!--                android:background="@color/white"-->
<!--                android:src="@drawable/ic_eye"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->
            <ToggleButton
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/toggle_password_selector"
                android:textOn=""
                android:textOff=""
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center"
                android:onClick="@{listnerHandler::toggleEvent}"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Powered By"
            android:textAllCaps="true"
            android:fontFamily="@font/ubuntu_regular"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/font_medium_small"
            app:layout_constraintBottom_toTopOf="@+id/imageView3"
            android:layout_marginBottom="@dimen/activity_margin_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textAlignment="textEnd"
            android:fontFamily="@font/ubuntu_medium"
            android:textSize="@dimen/font_small_14"
            android:textColor="@color/theme_color"
            android:layout_marginTop="@dimen/edit_text_margin_top_12"
            android:layout_marginEnd="@dimen/edit_text_margin_end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <Button
            android:id="@+id/btn_getStarted"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/edit_text_margin_start"
            android:layout_marginEnd="@dimen/edit_text_margin_end"
            android:layout_marginTop="@dimen/activity_margin_bottom"
            style="@style/ButtonThemeColorStyle"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@id/tv_forgotPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="@{listnerHandler::LoginClicked}"
            />

        <!--    <androidx.appcompat.widget.AppCompatEditText-->
        <!--        android:id="@+id/et_Password"-->
        <!--        android:hint="@string/password_hint"-->
        <!--        android:background="@drawable/edit_text_white_round_shape"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintTop_toBottomOf="@+id/et_Email"-->
        <!--        android:layout_marginTop="@dimen/edit_text_margin_top_12"-->
        <!--        android:layout_marginStart="@dimen/edit_text_margin_start"-->
        <!--        android:layout_marginEnd="@dimen/edit_text_margin_end"-->
        <!--        android:padding="@dimen/edit_text_padding"-->
        <!--        android:inputType="textPassword"-->

        <!--        />-->

<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                android:id="@+id/textInputLayout"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="@dimen/edit_text_view_height"-->
<!--                android:layout_marginStart="@dimen/edit_text_margin_start"-->
<!--                android:layout_marginEnd="@dimen/edit_text_margin_end"-->
<!--                android:layout_marginBottom="76dp"-->
<!--                app:boxBackgroundColor="#FFF"-->
<!--                app:boxStrokeColor="#FFF"-->
<!--                app:boxStrokeWidth="0dp"-->
<!--                app:boxStrokeWidthFocused="0dp"-->
<!--                app:hintEnabled="false"-->
<!--                app:expandedHintEnabled="false"-->
<!--                -->
<!--                app:layout_constraintBottom_toTopOf="@+id/textView3"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:passwordToggleEnabled="true">-->

<!--                <com.google.android.material.textfield.TextInputEditText-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="dfsdfsfsdfs"-->
<!--                    android:includeFontPadding="false"-->
<!--                    android:background="@drawable/edit_text_white_round_shape"-->
<!--                    android:ellipsize="start"-->
<!--                    android:inputType="textPassword" />-->

<!--            </com.google.android.material.textfield.TextInputLayout>-->


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>