<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.levelup.models.SignedInUser"/>
        <import type="com.example.levelup.models.RandomQuote"/>
        <import type="com.example.levelup.fragmentViewModels.HomeViewModel"/>
        <import type="android.view.View"/>

        <variable
            name="viewmodel"
            type="HomeViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.Home">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_fragment_color">

            <androidx.core.widget.NestedScrollView
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:fillViewport="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_welcome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_margin1_start"
                        android:layout_marginTop="@dimen/activity_margin_top_748"
                        android:fontFamily="@font/geometos_bold"
                        android:text="@string/welcome"
                        android:textAlignment="textStart"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_22"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_margin1_start"
                        android:layout_marginTop="@dimen/activity_margin_top"
                        android:fontFamily="@font/geometos_bold"
                       android:text="John"
                        android:textAlignment="textStart"
                        android:textAllCaps="true"
                        android:textColor="@color/theme_color"
                        android:textSize="@dimen/font_22"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/menu_recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginStart="@dimen/activity_margin1_start"
                        android:layout_marginTop="@dimen/activity_margin_top_32"
                        android:layout_marginEnd="@dimen/activity_margin1_start"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_margin1_start"
                        android:layout_marginTop="@dimen/activity_margin1_top"
                        android:layout_marginEnd="@dimen/activity_margin1_start"
                        android:layout_marginBottom="@dimen/activity_margin1_top"
                        android:background="@drawable/quote_bg"
                        android:padding="@dimen/padding_8"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/menu_recyclerView">

                        <TextView
                            android:id="@+id/tv_quote"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/activity_horizontal_end_48"
                            android:layout_marginTop="@dimen/activity_margin_top"
                            android:layout_marginEnd="@dimen/activity_horizontal_end_48"
                            android:fontFamily="@font/ubuntu_medium"
                            android:text="@string/quote"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="@dimen/font_medium"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tv_author"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/activity_horizontal_end_48"
                            android:layout_marginTop="@dimen/activity_margin_top"
                            android:layout_marginEnd="@dimen/activity_horizontal_end_48"
                            android:layout_marginBottom="@dimen/activity_margin_top"
                            android:fontFamily="@font/ubuntu_medium"
                            android:text="@string/author"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="@dimen/font_medium"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv_quote" />


                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>


    </FrameLayout>
</layout>